# fiscal-guard-ai-back

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.claude/agents/: code-reviewer.md
.claude/commands/: done.md  new-spec.md  start-batch.md
.claude/skills/: new-adapter.md  new-entity.md  new-port.md
.claude/specs/: README.md  _template.md
.claude/tasks/: README.md  lessons.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: exemplos.md  guia-desenvolvimento-ia.md  visao-geral-solucao.md
scripts/docker/: Dockerfile
scripts/flyway/: V1__create_initial_schema.sql
scripts/localstack/: init.sh
scripts/mockserver/: apitest.sh  mockserver-init.json
src/: main.py
src/adapters/inbound/api/: health_router.py
src/domain/entities/: __init__.py  download_config.py
src/domain/enums/: http_request.py  period_type.py  source_type.py
src/domain/exceptions/: __init__.py  event_exceptions.py
src/domain/ports/outbound/: __init__.py
src/infra/config/: settings.py
tests/integration/api/: test_health.py
tests/unit/infra/config/: test_settings.py
